Bug 1155387: Add missing #include for imgIContainer.h to ContentParent.cpp. r=enndeakin